<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context="com.vyy.imageprocessingpractice.MainActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/frame"
        android:paddingStart="40dp"
        android:paddingTop="45dp"
        android:paddingEnd="40dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/image" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progresBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/frame"
        app:layout_constraintEnd_toEndOf="@id/frame"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintTop_toTopOf="@id/frame"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_grayScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/gray"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/view_separatorLine"
        app:layout_constraintTop_toBottomOf="@id/view_separatorLine"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_rgb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/rgb"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/view_separatorLine"
        app:layout_constraintTop_toBottomOf="@id/view_separatorLine"
        tools:visibility="visible" />

    <View
        android:id="@+id/view_separatorLine"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/shadow_background"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/frame"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintTop_toBottomOf="@id/imageButton_reflect_x_axis" />

    <View
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/gray_level_5"
        app:layout_constraintBottom_toTopOf="@id/button_process"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/view_separatorLine" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <FrameLayout
        android:id="@+id/galleryButton_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xxx_large"
        android:background="@drawable/button_gallery_background"
        android:contentDescription="@string/take_a_photo_from_camera"
        android:padding="@dimen/padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline4">

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/ic_gallery_image_24"
            app:backgroundTint="@color/white" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cameraButton_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xxx_large"
        android:background="@drawable/button_camera_background"
        android:contentDescription="@string/pick_image_from_gallery"
        android:padding="@dimen/padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline4">

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/ic_capture_videocam"
            app:backgroundTint="@color/white" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/imageButton_reflect_y_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/reflect_on_y_axis"
        android:padding="@dimen/padding_medium"
        android:src="@drawable/ic_flip"
        app:layout_constraintEnd_toStartOf="@id/imageButton_reflect_x_axis"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <ImageButton
        android:id="@+id/imageButton_reflect_x_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/reflect_on_x_axis"
        android:padding="@dimen/padding_medium"
        android:rotation="270"
        android:src="@drawable/ic_flip"
        app:layout_constraintEnd_toStartOf="@id/imageButton_resize"
        app:layout_constraintStart_toEndOf="@id/imageButton_reflect_y_axis"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <ImageButton
        android:id="@+id/imageButton_resize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/image_button_unselected_background"
        android:contentDescription="@string/resize_image"
        android:padding="@dimen/padding_medium"
        android:src="@drawable/ic_photo_resize_24"
        app:layout_constraintEnd_toStartOf="@id/imageButton_crop"
        app:layout_constraintStart_toEndOf="@id/imageButton_reflect_x_axis"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <ImageButton
        android:id="@+id/imageButton_crop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/image_button_unselected_background"
        android:contentDescription="@string/crop_image"
        android:padding="@dimen/padding_medium"
        android:src="@drawable/ic_crop_24"
        app:layout_constraintEnd_toStartOf="@id/imageButton_pixelate"
        app:layout_constraintStart_toEndOf="@id/imageButton_resize"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <ImageButton
        android:id="@+id/imageButton_pixelate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/image_button_unselected_background"
        android:contentDescription="@string/pixelate_image"
        android:padding="@dimen/padding_medium"
        android:src="@drawable/ic_pixelate_24"
        app:layout_constraintEnd_toEndOf="@id/frame"
        app:layout_constraintStart_toEndOf="@id/imageButton_crop"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_width"
        style="@style/textInputLayoutStyle"
        android:hint="@string/width"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/view_separatorLine"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_width"
            style="@style/textInputEditTextStyle"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_height"
        style="@style/textInputLayoutStyle"
        android:hint="@string/height"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/view_separatorLine"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_height"
            style="@style/textInputEditTextStyle"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_fromX"
        style="@style/textInputLayoutStyle"
        android:hint="@string/fromx"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/textInputLayout_fromY"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_width">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_fromX"
            style="@style/textInputEditTextStyle"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_fromY"
        style="@style/textInputLayoutStyle"
        android:hint="@string/fromy"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_width">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_fromY"
            style="@style/textInputEditTextStyle"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_toX"
        style="@style/textInputLayoutStyle"
        android:hint="@string/tox"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_height">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_toX"
            style="@style/textInputEditTextStyle"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_toY"
        style="@style/textInputLayoutStyle"
        android:hint="@string/toy"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/textInputLayout_toX"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_height">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_toY"
            style="@style/textInputEditTextStyle"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:backgroundTint="@color/white"
        android:text="@string/pixelate"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize_small"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_height"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_width"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_fromX"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>